--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
@@ -32,5 +32,5 @@ spec:
               version: 16.1.2
               replicas: 2
               storage:
-                class: managed-nfs-storage
+                class: ocs-external-storagecluster-cephfs
 
